[tool.poetry]
name = "milestone2"
version = "0.1.0"
description = ""
authors = ["Khanh Nguyen <khanhng@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
altair = "^5.3.0"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
tslearn = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
